[project]
name = "sqlite-migrate"
version = "0.1a0"
description = "A simple database migration system for SQLite, based on sqlite-utils"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha"
]

dependencies = [
    "sqlite-utils"
]

[project.urls]
Homepage = "https://github.com/simonw/sqlite-migrate"
Changelog = "https://github.com/simonw/sqlite-migrate/releases"
Issues = "https://github.com/simonw/sqlite-migrate/issues"

[project.optional-dependencies]
test = ["pytest"]

[project.entry-points.sqlite_utils]
migrate = "sqlite_migrate.sqlite_utils_plugin"
